# -C-Users-DylanBaker-Dev-Dropbox-Apps-TimeKeeperWeb-

./: LICENSE  README.md
backend/: .env  Procfile  db_setup.py  fly.toml  pyproject.toml  requirements.txt  server.py  update_schema.py  wsgi.py
backend/app/: database.py  main.py  models.py  schemas.py  utils.py
backend/app/routes/: __init__.py  auth.py  projects.py  reports.py  timer.py
frontend/: .env  index.html  package-lock.json  package.json
frontend/src/: App.tsx  routes.tsx
frontend/src/components/common/: Navbar.tsx
frontend/src/components/projects/: ProjectCard.tsx  ProjectDetails.tsx  ProjectForm.tsx  ProjectList.tsx
frontend/src/components/reports/: ReportChart.tsx  ReportFilters.tsx  ReportView.tsx
frontend/src/components/timer/: Timer.tsx  TimerControls.tsx  TimerHistory.tsx
frontend/src/context/: AuthContext.tsx  ProjectContext.tsx  TimerContext.tsx
frontend/src/hooks/: useProjects.ts  useReports.ts  useTimer.ts
frontend/src/layouts/: AuthLayout.tsx  MainLayout.tsx
frontend/src/pages/: DashboardPage.tsx  HomePage.tsx  LoginPage.tsx  NotFoundPage.tsx  ProjectDetailsPage.tsx  ProjectEditPage.tsx  ProjectsPage.tsx  RegisterPage.tsx  ReportsPage.tsx  SettingsPage.tsx  TimerPage.tsx
frontend/src/services/: api.ts  apiService.ts  auth.service.ts  mockApi.ts  project.service.ts  report.service.ts  timer.service.ts
frontend/src/types/: auth.types.ts  project.types.ts  timer.types.ts
